fix(quality): resolve sonar issues